Improve performance of tests (#63)
* remove redundant:
LINE_COMMENT, MULTILINE_COMMENT fromm flex

* remove redundant:
LINE_COMMENT, MULTILINE_COMMENT fromm flex - new output

* performance tests 11 min -> 6 min: move IDENTIFIER before operators

* performance tests 6 min -> 10 sec: comment out most code in long tests

* performance tests 6 min -> 10 sec: comment out most code in long tests - output token files

* fix generating types: add tokens to BNF, remove ambiguous MULTILINE_COMMENT and BOOLEAN defs in BNF, rename ambiguous INT to KW_INT in FLEX

* Add generated code and test tokens

restore readme